# ClooneyAI

./: .env.example  .gitignore  Makefile  README.md  claude.md  mypy.ini  pyproject.toml
docs/: 01.Setup.md  02.Folder_Structure.md  03.Phase1a.md  04.Phase1b.md  04.Phase1d.md
src/: main.py
src/browser/: login.py  scraper.py
src/config/: __init__.py  settings.py
src/prompts/: iterative_login_prompts.py  login_element_identification.py
src/services/: openai_service.py
src/utils/: storage.py
src/workflows/: __init__.py  clone_workflow.py  nodes.py  state.py
